@@ -1,3 +1,10 @@
+2009-09-05  Kai Tietz  <kai.tietz@onevision.com>
+
+	* misc/_crt_veh.c: Removed.
+	* crt/crtexe.c (_CRT_VEH): Removed.
+	* Makefile.am (misc/_crt_veh.c): Removed.
+	* Makefile.in: Regenerated.
+
 2009-09-04  Kai Tietz  <kai.tietz@onevision.com>
 
 	* crt/crt_handler.c: New.
